--- a/src/components/GraphSection/GraphSection.scss
+++ b/src/components/GraphSection/GraphSection.scss
@@ -8,11 +8,18 @@
   align-items: center;
   gap: 16px;
 
-  h2 {
-    font-size: 24px;
-    font-weight: 600;
-    color: #1a1a1a;
+  .graph-titile {
+    font-size: 28px;
+    color: #2c3e50;
+    font-weight: 700;
     margin: 0;
+    padding: 16px 0;
+    text-align: center;
+    position: relative;
+    width: 100%;
+    letter-spacing: -0.5px;
+    
+
   }
 
   .graph-header {
@@ -54,7 +61,12 @@
     }
   }
 
-  .team-select {
+  .selecters{
+    display:flex;
+gap:5px;
+  }
+
+  .team-select,.time-select {
     padding: 10px 16px;
     border: 1px solid #e0e0e0;
     border-radius: 6px;
@@ -85,7 +97,7 @@
 
   .graph-placeholder {
     width: 100%;
-    background-color: #f8f9fa;
+    background-color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -94,7 +106,7 @@
     color: #666;
     font-size: 16px;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
-    overflow-x: scroll;
+    overflow-x:auto;
     overflow-y: scroll;
   }
 } 
