--- a/src/components/GraphSection/graphs/GraphStyles.scss
+++ b/src/components/GraphSection/graphs/GraphStyles.scss
@@ -75,8 +75,8 @@ h3 {
 }
 
 .pr-activity-table-container {
-  margin: 40px auto 0 auto;
-  max-width: 600px;
+  margin: 0 auto;
+  max-width: auto;
   width: 100%;
 }
 .pr-activity-table {
@@ -93,19 +93,21 @@ h3 {
 .pr-activity-table th:first-child,
 .pr-activity-table td:first-child {
   text-align: right;
-  padding-right: 16px;
+  padding-right: 0px;
 }
 .pr-activity-table td {
   border-radius: 4px;
   text-align: center;
   font-weight: 500;
 }
-.pr-activity-table .merged {
+.pr-activity-table .merged ,.not-merged ,.name{
   color: #111;
   font-size: 32px;
 }
-.pr-activity-table .not-merged,
-.pr-activity-table .locked {
+.pr-activity-table  {
   color: #fff;
   font-size: 28px;
 } 
+.changed-lines{
+
+}
