--- a/src/theme/styles/variables.scss
+++ b/src/theme/styles/variables.scss
@@ -73,9 +73,8 @@ $leave-day-bg: #11b411;
 $text-field-border-color: #c8c4c4; // used in the login
 $theme-border-color: #0000001f; // table border color
 $calendar-picker-font-color: #000000dd;
-$menu-box-shadow:
-        rgba(14 30 37 / 12%) 0 2px 4px 0,
-        rgba(14 30 37 / 32%) 0 2px 16px 0;
+$menu-box-shadow: rgba(14 30 37 / 12%) 0 2px 4px 0,
+  rgba(14 30 37 / 32%) 0 2px 16px 0;
 
 /* Mapping color variables */
 // seems to be an issue here
