--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,8 +1,9 @@
 .layout {
     display: flex;
     flex-direction: column;
+    gap: 20px;
+    padding: 20px;
     min-height: 100vh;
-    width: 100%;
     background-color: #f5f5f5;
   }
   
