--- a/src/components/ChatSection/ChatSection.scss
+++ b/src/components/ChatSection/ChatSection.scss
@@ -1,3 +1,5 @@
+@import "../../theme/styles/variables";
+
 .chatbot {
   padding: 20px;
   background-color: #ffffff;
@@ -19,31 +21,23 @@
     display: flex;
     gap: 10px;
 
-    input {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
-      outline: none;
-
-      &:focus {
-        border-color: #007bff;
+    .MuiOutlinedInput-root {
+      @include font-style(body);
+      &.Mui-focused fieldset {
+        border-color: $secondary-color;
+        font-size: 14px;
       }
     }
 
-    button {
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-
-      &:hover {
-        background-color: #0056b3;
+    .MuiInputLabel-root {
+      @include font-style(body);
+      &.Mui-focused {
+        color: $secondary-color;
       }
+    }
+
+    .send-button {
+      @extend .base-button;
     }
   }
 }
