--- a/src/theme/styles/variables.scss
+++ b/src/theme/styles/variables.scss
@@ -9,6 +9,8 @@ $font-color-secondary: #ffffff;
 $font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
   Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 
+//   $font-family: Poppins, Mulish, sans-serif;
+
 $font-heading: 28px;
 $font-normal: 14px;
 
